--- a/package.json
+++ b/package.json
@@ -8,17 +8,18 @@
     }
   ],
   "scripts": {
-    "start": "node src/main/main.ts"
+    "start": "node src/main/main.ts",
+    "ci": "npm ci"
   },
   "private": true,
   "dependencies": {
-    "discord.js": "^12.5.3",
+    "discord.js": "^14.13.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "node-fetch": "^2.6.7"
   },
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^20.5.0"
+    "@types/node": "^20.5.7"
   }
 }
